<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App information-->
    <string name="app_name">TEACHomatic 3000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Die App für Lehrer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Navigation Drawer List-->
    <string name="menu_home">Home</string>
...
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_students">Students</string>
    <string name="menu_lehrstoff">Lehrstoff erstellen</string>
    <string name="menu_lehrstoffübersicht">Lehrstoffübersicht</string>

    <!--General-->
    <string name="save">Speichern</string>
    <string name="add">Hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="bearbeitungsdatum">Bearbeitungsdatum: </string>
    <string name="erstelldatum">Erstelldatum: </string>

    <!--Errors-->
    <string name="error_long_input">Eingabe zu lang.</string>
...
    <string name="error_add_lehrstoff">Lehrstoff konnte nicht hinzugefügt werden</string>
    <string name="error_add_prüfung">Prüfung konnte nicht hinzugefügt werden</string>
    <string name="error_edit_student">Schülername konnte nicht bearbeitet werden</string>

    <!--Students-->
    <string name="student_text">Schüler*innen:</string>
    <string name="student_add">SuS hinzufügen</string>
    <string name="student_firstname_hint">Max</string>
    <string name="student_lastname_hint">Mustermann</string>

    <!--Classes-->
    <string name="class_text">Klasse: </string>
    <string name="class_hint">Name der Klasse</string>
...
    <string name="class_edit_cancel">Klassenname wurde nicht geändert.</string>
    <string name="class_edit_popup">Klassenname ändern</string>


    <!--Settings-->
    <string name="settings_date">Datum manuell einstellen</string>
    <string name="settings_language">Deutsch {} 中国人</string>
    <string name="settings_anonymize">Anonymisieren</string>
    <string name="settings_anonymize_class">Klasse anonymisieren</string>
    <string name="settings_anonymize_students">Schülernamen wurden anonymisiert!</string>
    <string name="settings_anaonymize_students_of_class">Schülernamen in Klasse wurden anonymisiert!</string>

    <!--Lehrstoff-->
...
    <string name="lehrstoff_uebersicht">Lehrstoffübersicht:</string>
    <string name="lehrstoff_add_text">Neuen Lehrstoff hinzufügen:</string>
    <string name="lehrstoff_description_text">Beschreibung des Lehrstoffs:</string>
    <string name="lehrstoff_add">Lehrstoff erstellen</string>
    <string name="lehrstoff_title">Lehrstofftitel</string>
    <string name="lehrstoff_id">Lehrstoff-ID</string>
    <string name="lehrstoff_description">Lehrstoffbeschreibung</string>
    <string name="lehrstoff_date">Lehrstoffdatum</string>
    <string name="lehrstoff_edit_title">Lehrstoff bearbeiten: </string>

    <!--Prüfungen-->
    <string name="prüfung_text">Prüfungen:</string>
    <string name="pruefung_add">Prüfung erstellen</string>
...
